--- a/my sites/index.html
+++ b/my sites/index.html
@@ -36,6 +36,7 @@
                 </div>
               </div>
             <h4 id="myContent">My Content</h4>
+            Di sini saya akan menambahkan sebuah teks ea ea ea
         </section>
         <aside>
             <div id="side-menu">
