fix content card

--- a/my sites/index.html
+++ b/my sites/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img id="logo" src="gtc.jpg" alt="logo">
+            <a href="index.html"><img id="logo" src="gtc.jpg" alt="logo"></a>
             <h3 id="title">Ridho Aji Gumilang's sites</h3>
             <ul id="navMenu">
                 <a href=""><li>Home</li></a>
@@ -27,16 +27,33 @@
             <h4>My Sites</h4>
             <img src="https://drive.google.com/uc?export=view&id=14gqCXyECYupb7wi-OfygNVuM80Zjieqd" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, architecto id voluptas natus libero harum atque itaque et labore excepturi ducimus maxime eligendi exercitationem tempora asperiores ut eos. Quisquam, ab?</p>
-            <div class="card" style="width: 18rem;">
-                <img src="https://drive.google.com/uc?export=view&id=14gqCXyECYupb7wi-OfygNVuM80Zjieqd" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
             <h4 id="myContent">My Content</h4>
-            Di sini saya akan menambahkan sebuah teks ea ea ea
+            <div id="content-card-container">
+                <div class="card card1" style="width: 18rem;">
+                    <img src="https://drive.google.com/uc?export=view&id=14gqCXyECYupb7wi-OfygNVuM80Zjieqd" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">TM 6000</h5>
+                      <p class="card-text">KRL buatan Jepang dari perusahaan Tokyo Metro</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card card2" style="width: 18rem;">
+                    <img src="https://drive.google.com/uc?export=view&id=14gqCXyECYupb7wi-OfygNVuM80Zjieqd" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">TM 05</h5>
+                      <p class="card-text">KRL buatan Jepang dari perusahaan Tokyo Metro</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card card3" style="width: 18rem;">
+                    <img src="https://drive.google.com/uc?export=view&id=14gqCXyECYupb7wi-OfygNVuM80Zjieqd" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">JR 203</h5>
+                      <p class="card-text">KRL buatan Jepang dari perusahaan Japan Railway</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <aside>
             <div id="side-menu">
